Parameters von Sensor können über Konsolenaufruf eingestellt werden. Messung von Empfangenen und Verlorenen Packeten besser über id in den Packeten.